Fix: z-index 클래스 추가

--- a/src/css/postcss.pcss
+++ b/src/css/postcss.pcss
@@ -32,6 +32,8 @@
 
   .bg-leteu-$(i) { background: hsl(171, 65%, calc(63%*$(i)/100)) }
   .bg-leteu-under-$(i) { background: hsl(171, 37%, calc(48%*$(i)/100)) }
+
+  .z-index-$(i) { z-index: $(i) }
 }
 
 @for $i from 1 to 2000 {
